--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Short Tips and Remarks on Data Science
+description: Collection of short, ready-to-apply hints that make data science more fun.
 github_username: lgyarmati
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "data-science-blog"
@@ -39,11 +39,11 @@ baseurl: "/data-science-blog" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: lgyar 
+    github: 
 
 # Set this to true to get LaTeX math equation support
-use_math: 
+use_math: false
 
 # Set this to true to display the summary of your blog post under your title on the Home page.
 show_description: true
@@ -58,7 +58,7 @@ annotations: false
 show_tags: true
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics: 
+google_analytics: G-5EC2T2VHP1
 
 exclude:
   - docker-compose.yml
@@ -71,9 +71,9 @@ include:
 
 # This specifies what badges are turned on by default for notebook posts.
 default_badges:
-  github: true
-  binder: true
-  colab: true
+  github: false
+  binder: false
+  colab: false
 
 # Escape HTML in post descriptions
 html_escape:
